--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </div>
 
   <audio id="audioPlayer" loop>
-  <source src="https://docs.google.com/uc?export=download&id=1u2bf_PRs43HA5EBR6B3wXqyTApNsR-B_" type="audio/mpeg">
+  <source src="./Mi bendición.mp3" type="audio/mpeg">
   </audio>
 
   <script src="script.js"></script>
