--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           </svg>
         </span>
       </button>
+
     </div>
 
     <!-- Reproductor de música -->
@@ -53,6 +54,10 @@
         </div>
       </div>
     </div>
+
+  <h2>Feliz Aniversario mi amor</h2>
+  <h2>Harold y Leidys</h2>
+  <h3>01 / 05 / 18</h3>
   </div>
 
   <audio id="audioPlayer" loop>
