--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
         </div>
       </div>
     </div>
+    <div id="cont-hh">
 
-  <h2>Feliz Aniversario mi amor</h2>
-  <h2>Harold y Leidys</h2>
-  <h3>01 / 05 / 18</h3>
+      <h2>Feliz Aniversario mi amor</h2>
+      <h2>Harold y Leidys</h2>
+      <h3>01 / 05 / 18</h3>
+    </div>
   </div>
 
   <audio id="audioPlayer" loop>
