--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Press heart ❤️</title>
-  <meta name="description" content="Haz clic en el corazón para liberar frases de amor. Optimizado para un rendimiento fluido en móviles." />
+  <meta name="description" content="feliz aniversario mi amor HYL <3." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy:wght@100..900&display=swap" rel="stylesheet">
